# AppMute

./: .gitignore  README.md  README_CN.md
03-app-mute/: CLAUDE.md  Cargo.toml  app-mute.spec  config.toml  requirements.txt
03-app-mute/src/: audio.py  audio.rs  config.py  config.rs  gui.py  hotkey.py  hotkey.rs  main.py  main.rs  tray_icon.py  win32hotkey.py
04-app-mute-cs/: AppMute.csproj  AudioManager.cs  CLAUDE.md  Config.cs  HotkeyManager.cs  Program.cs  config.json
05-app-mute-c/: README.md  app-mute.c  config.toml
06-app-mute/: AppMute.csproj  CLAUDE.md  Program.cs  README.md  工作记录.md
07-app-mute-cpp/: CLAUDE.md  CMakeLists.txt  README.md  build.bat
07-app-mute-cpp/src/: audio.cpp  audio.h  config.cpp  config.h  dialog.cpp  dialog.h  hotkey.cpp  hotkey.h  main.cpp  tray.cpp  tray.h
08-app-mute-rs/: CLAUDE.md  Cargo.toml  config.toml
08-app-mute-rs/src/: audio.rs  config.rs  hotkey.rs  main.rs
